11 January 2026 v684: Filters are now shown in a sidebar instead of inline. This provides much more room on small devices. Edit crash: Map now has collapsed search button. Transportation modes: Fixed: Period filter did not work

--- a/main.css
+++ b/main.css
@@ -430,7 +430,7 @@ h3, .pageSubTitleFont {
   row-gap: 5px;
   align-items: center;
   justify-content: center;
-  padding: 10px 20px 10px 10px;
+  padding: 5px;
   background-color: var(--bg-level2);
 }
 
@@ -438,7 +438,7 @@ h3, .pageSubTitleFont {
   display: flex;
 }
 
-.filterInput {
+.filterBarInput {
   display: none;
   border: 1px solid #ccc;
   height: 30px;
@@ -447,24 +447,30 @@ h3, .pageSubTitleFont {
   padding-left: 5px;
 }
 
-.filterInput.active {
+.filterBarInput.active, .filterItem.active {
   display: flex;
 }
 
-.filterStatus {
+.filterItem {
   display: none;
+  border: 1px solid #ccc;
+  width: 100%;
+  height: 30px;
+  margin: 10px 0;
+  box-sizing: border-box;
+  border-radius: 3px;
+}
+
+.filterStatus {
+  display: flex;
   width: 100%;
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   row-gap: 5px;
-  padding-bottom: 10px;
+  padding: 5px;
   background-color: var(--bg-level2);
-}
-
-.filterStatus.active {
-  display: flex;
 }
 
 .filterStatusItem {
@@ -476,7 +482,7 @@ h3, .pageSubTitleFont {
   height: 30px;
   box-sizing: border-box;
   padding-left: 5px;
-  margin: 0 5px;
+  margin-left: 5px;
   border: 1px solid #ccc;
   border-radius: 3px;
   cursor: pointer;
@@ -511,13 +517,18 @@ h3, .pageSubTitleFont {
 }
 
 .dropInputWrapper {
-  position:   relative;
-  text-align: left;
+  position: relative;
+  width: 100%;
 }
 
 .dropInput {
+  height: 30px;
+  box-sizing: border-box;
+  border-radius: 3px;
+  padding-left: 5px;
+
   display: flex;
-  width: 150px;
+  width: 100%;
   align-items: center;
   overflow: hidden;
   padding-right: 20px;
@@ -1327,17 +1338,41 @@ h3, .pageSubTitleFont {
   margin-bottom: 10px;
 }
 
-#navigation {
+#navigation, #filters {
   display: flex;
   flex-direction: column;
   position: fixed;
   z-index: 201;
   top: 0;
-  left: -300px;
   width: 300px;
   height: 100%;
   background-color: #ffffff;
   transition: transform 0.3s;
+}
+
+#navigation {
+  left: -300px;
+}
+
+#filters {
+  background-color: var(--bg-level2);
+  right: -300px;
+}
+
+.filtersHeader {
+  display: flex;
+  justify-content: center;
+  padding: 7px 10px;
+  background-color: var(--menu-header-bgcolor);
+  color: var(--menu-header-color);
+  font-size: 16px;
+}
+
+
+.filtersHeader {
+  display: flex;
+  align-content: center;
+  font-size: 20px;
 }
 
 .navShadow {
@@ -1354,6 +1389,10 @@ h3, .pageSubTitleFont {
 
 .navigationOpen {
   transform: translateX(300px);
+}
+
+.filtersOpen {
+  transform: translateX(-300px);
 }
 
 .navShadowOpen {
@@ -1406,13 +1445,13 @@ h3, .pageSubTitleFont {
 }
 
 .navigationSectionHeader {
-  padding:          7px 10px;
+  padding: 7px 10px;
   background-color: var(--menu-header-bgcolor);
   color: var(--menu-header-color);
-  font-size:        16px;
+  font-size: 16px;
 }
 
-.navigationSectionHeader > select{
+.navigationSectionHeader > select {
   background-color: #eeeeee;
   font-size:        16px;
   margin-left:      5px;
@@ -1882,7 +1921,7 @@ table.tableDragging td div {
     display: flex !important;
   }
 
-  #filterBar input[type=search], .dropInput {
+  #filterBar input[type=search] {
     max-width: 100px;
   }
 
